<resources>
    <string name="app_name">PsychologyTests</string>
    <string name="title_activity_level1">level1</string>
    <string name="level1qw1"> Sometimes I laugh at an indecent joke</string>
    <string name="level1qw2"> If they address me politely, I always answer politely too</string>
    <string name="level1qw3"> sometimes I have money problems</string>
    <string name="level1qw4"> I am always pleased when a person I do not like achieves well-deserved success</string>
    <string name="level1qw5"> Sometimes put off what needed to be done immediately</string>
    <string name="level1qw6">In the society of people I behave differently than at home</string>
    <string name="level1qw7"> I am completely free from any prejudice</string>
    <string name="level1qw8"> I dont always tell the truth</string>
    <string name="level1qw9"> When I play with someone, I always want to win</string>
    <string name="level1qw10"> Sometimes I get angry</string>
    <string name="level1qw11"> In my defense, I sometimes invented something</string>
    <string name="level1qw12"> Sometimes I lose my temper</string>
    <string name="level1qw13"> As a child, I immediately and without wrangling did everything that was required of me</string>
    <string name="level1qw14"> Sometimes I get annoyed with something</string>
    <string name="level1qw15"> It happens that I laugh at an indecent joke</string>
    <string name="level1qw16">I used to be late for the appointed time</string>
    <string name="level1qw17"> I like to gossip sometimes</string>
    <string name="level1qw18"> Among those I know, there are faces that I really dont like</string>
    <string name="level1qw19">I dont remember being particularly saddened by the failures of a man I cant stand</string>
    <string name="level1qw20">I happened to be late</string>
    <string name="level1qw21"> I tend to brag sometimes</string>
    <string name="level1qw22"> Sometimes there is no desire to do anything</string>
    <string name="level1qw23"> I sometimes have thoughts that I am ashamed to tell others about</string>
    <string name="level1qw24"> Sometimes I turned out to be the reason for the bad mood of someone around me</string>
    <string name="level1qw25"> sometimes I told lies</string>
    <string name="level1qw26"> All my habits are positive</string>
    <string name="level1qw27"> If I promised something, I always keep my word no matter what</string>
    <string name="level1qw28"> Sometimes I brag</string>
    <string name="level1qw29"> As a teenager, I showed interest in taboo topics</string>
    <string name="level1qw30"> I sometimes put off until tomorrow what needs to be done today</string>
    <string name="level1qw31">I have thoughts that I should be ashamed of</string>
    <string name="level1qw32"> I dont love all my friends</string>
    <string name="level1qw33"> I can say bad things about someone</string>
    <string name="level1qw34"> I can say bad things about someone</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="level1_oneAnswer">Very low score on the Honesty scale.
        It indicates a pronounced tendency to lie, to embellish oneself.
        It can also indicate low levels of social intelligence. If given
        the questionnaire was used as part of a battery of methods,
        then the results on personality questionnaires should be recognized as unreliable.</string>
    <string name="level1_twoAnswer">Low score on the Honesty scale.
        Indicates a significant tendency to lie. He likes to embellish himself, his behavior.
        If the questionnaire was used as part of a battery of methods, then the results on personality questionnaires
        need not be considered unreliable. However, their results should be considered quite critically..</string>
    <string name="level1_threeAnswer">There was no tendency to lie.
        May be occasionally inclined to embellish himself, his behavior, but within the normal range.</string>
    <string name="level1_fourAnswer">High score on the Honesty scale.
        Such a high result can be associated not only with high personal honesty, but also a consequence of other reasons: deliberate
        distortion of answers, very wrong self-assessment. This result should be treated with caution.</string>
    <string name="title_activity_level_one_spisok">level_one_spisok</string>
    <string name="observationqw_dialog"> There are people who are always on the alert - nothing can surprise them, stun them, confuse them. Their opposite is
        scattered and inattentive people, lost in meetings</string>
    <string name="observationqw1">Are you joining an organization</string>
    <string name="observationqw2"> When you meet a person</string>
    <string name="observationqw3"> What do you remember from the landscape you see</string>
    <string name="observationqw4"> When you wake up in the morning, what do you do? </string>
    <string name="observationqw5"> When you wake up in the morning</string>
    <string name="observationqw6">On the street you</string>
    <string name="observationqw7"> When you look at the window</string>
    <string name="observationqw8"> If you need to find something at home, then inы</string>
    <string name="observationqw9">  Looking at an old group photo of your loved ones, friends, you</string>
    <string name="observationqw10"> Imagine that you are offered to play a game of chance that you do not know. You</string>
    <string name="observationqw11"> you are waiting for someone in the park and:</string>
    <string name="observationqw12"> In the starry night you:</string>
    <string name="observationqw13"> When you read a book, you:</string>
    <string name="observationqw14"> Do you remember your neighbors:</string>
    <string name="observationqw15"> Standing in front of the served table:</string>
    <string name="observationAnwer1_10"> Pay attention to the exact location of objects</string>
    <string name="observationAnwer2_10"> Imperceptibly look him up and down</string>
    <string name="observationAnwer3_10"> Colors</string>
    <string name="observationAnwer4_10"> Immediately remember what you have to do</string>
    <string name="observationAnwer5_10"> Exchange a word or two with those who are closest to you</string>
    <string name="observationAnwer6_10"> Watching passers-by </string>
    <string name="observationAnwer7_10">  Several times carefully consider each item </string>
    <string name="observationAnwer8_10">  Focus on the place where you think you might have left the item </string>
    <string name="observationAnwer9_10">  You are trying to recognize those who are filmed </string>
    <string name="observationAnwer10_10"> Trying to learn how to play it and win </string>
    <string name="observationAnwer11_10">  Pay close attention to those around you </string>
    <string name="observationAnwer12_10">  Trying to see the constellations </string>
    <string name="observationAnwer13_10"> Mark with a pencil the place you have reached </string>
    <string name="observationAnwer14_10"> Their first and last name </string>
    <string name="observationAnwer15_10"> Check if everything is in place </string>
    <string name="observationAnwer1_5"> Look at whats hanging on the walls</string>
    <string name="observationAnwer2_5">Just look him in the face</string>
    <string name="observationAnwer3_5"> Sky</string>
    <string name="observationAnwer4_5">  Think about what happened yesterday</string>
    <string name="observationAnwer5_5"> Look at those who are standing next to you</string>
    <string name="observationAnwer6_5">  Watching traffic </string>
    <string name="observationAnwer7_5"> Look at what you dont need at the moment </string>
    <string name="observationAnwer8_5"> Looking everywhere </string>
    <string name="observationAnwer9_5">  You are trying to recognize those who are filmed </string>
    <string name="observationAnwer10_5"> Abandon this venture after a while </string>
    <string name="observationAnwer11_5">  Reading a newspaper </string>
    <string name="observationAnwer12_5">  Just look at the sky </string>
    <string name="observationAnwer13_5"> Leave a bookmark </string>
    <string name="observationAnwer14_5"> Neither one nor the otherе </string>
    <string name="observationAnwer15_5"> See if all the chairs are right </string>
    <string name="observationAnwer1_3"> Pay attention to the arrangement of tables and chairs </string>
    <string name="observationAnwer2_3"> Pay attention only to certain parts of the face</string>
    <string name="observationAnwer3_3"> The feeling of joy or sadness that gripped you then</string>
    <string name="observationAnwer4_3"> Remember what you dreamed</string>
    <string name="observationAnwer5_3"> Go ahead without looking at anyone</string>
    <string name="observationAnwer6_3"> Look at the front of the houses </string>
    <string name="observationAnwer7_3"> Only interested in what might be useful to you </string>
    <string name="observationAnwer8_3"> Ask others to help you </string>
    <string name="observationAnwer9_3"> You become funny </string>
    <string name="observationAnwer10_3"> Dont play at all </string>
    <string name="observationAnwer11_3"> Dreaming about something (thinking) </string>
    <string name="observationAnwer12_3">  Dont look at all </string>
    <string name="observationAnwer13_3">  Trust your memory </string>
    <string name="observationAnwer14_3">  Their appearance </string>
    <string name="observationAnwer15_3">  Admire his sophistication </string>
    <string name="observation_oneAnswer">Undoubtedly, you are extremely observant.
        At the same time, you are able to analyze yourself and your actions. You are able to appreciate another person with remarkable accuracy.</string>
    <string name="observation_twoAnswer">You have developed enough observation
        but still, when evaluating, sometimes prejudice fails you.</string>
    <string name="observation_threeAnswer"> You are not too interested in what is hidden behind appearance, manner of behavior
        others. Although in communication you do not have any serious psychological problems.
Less than 45 points. You are absolutely not interested in the innermost thoughts of those who are close to you. You are too busy, you have no time to analyze even your own actions,
        let alone those of others. You will not be offended if you are considered an egoist?</string>
    <string name="kindness">  Quiz Are you kind? </string>
    <string name="Entrepreneur1_1"> Reluctant, waiting for instructions</string>
    <string name="Entrepreneur2_1"> Performs the required amount of work without guidance</string>
    <string name="Entrepreneur3_1"> Resourceful, savvy on assignment</string>
    <string name="Halerik1_Qw"> Restless, fussy</string>
    <string name="Sangvinik1_Qw"> Cheerful and cheerful;</string>
    <string name="Flegmatik1_Qw"> Calm and cool</string>
    <string name="Melanholik1_Qw"> Shy and modest</string>
    <string name="sposobnosti_item">Ability Tests</string>
    <string name="main_page">Main Page</string>
    <string name="haracter_item">Character Tests</string>
    <string name="family_item">Family tests</string>
    <string name="test_intelect">Intelligence tests</string>
    <string name="history">History of passed tests</string>
    <string name="BacTotheList">Back to the list of tests</string>
    <string name="Question">Question</string>
    <string name="Settings">Settings</string>
    <string name="Back">Сome back</string>
    <string name="SelectVar">Choose the option that suits you best</string>
    <string name="IntelectMill_qw_1">Длина удава в советском мультфильме была равна 38 попугаям и…</string>
</resources>