<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroung"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".tests.honesty_tests"
    tools:deviceIds="wear">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vopros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Question"
            android:textColor="@color/text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/numberQW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:fontFamily="@font/roboto"
            android:text="1"
            android:textColor="@color/text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vopros1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:paddingRight="5dp"
            android:fontFamily="@font/roboto"
            android:text="/"
            android:textColor="@color/text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vopros2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="20"
            android:textColor="@color/text"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewQW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/SelectVar"
            android:textColor="@color/text"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:divider="@drawable/separator"
        android:dividerPadding="4dp"
        android:showDividers="middle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewQ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="18sp"
            android:layout_marginLeft="12dp"
            android:padding="10dp"
            android:background="@drawable/btn_game_true_and_false"
            android:fontFamily="@font/roboto"
            android:layout_marginRight="5dp"
            android:textColor="@color/text"
            android:text="@string/Flegmatik1_Qw" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="18sp"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_game_true_and_false"
            android:fontFamily="@font/roboto"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/text"
            android:text="@string/Halerik1_Qw" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:background="@drawable/btn_game_true_and_false"
            android:fontFamily="@font/roboto"
            android:textColor="@color/text"
            android:textSize="18sp"
            android:text="@string/Sangvinik1_Qw" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="2dp"
            android:textSize="18sp"
            android:background="@drawable/btn_game_true_and_false"
            android:fontFamily="@font/roboto"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:textColor="@color/text"
            android:text="@string/Melanholik1_Qw" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="317dp"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/stule_btn_black95_and_true"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:text="@string/BacTotheList"
            android:textColor="@color/text"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>
