<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroung"

    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".tests.Intelect_One"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/vopros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/Question"
            android:textColor="@color/text"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/numberQW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="10dp"
            android:paddingRight="2dp"
            android:fontFamily="@font/roboto"
            android:text="1"
            android:textColor="@color/text"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/vopros1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="2dp"
            android:paddingRight="5dp"
            android:fontFamily="@font/roboto"
            android:text="/"
            android:textColor="@color/text"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/vopros2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="12"
            android:textColor="@color/text"
            android:textSize="22sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="@font/roboto"
            android:text="@string/IntelectMill_qw_1"
            android:textColor="@color/text"
            android:textSize="22sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:divider="@drawable/separator"
        android:dividerPadding="4dp"
        android:showDividers="middle"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_game_true_and_false"
            android:padding="10dp"
            android:paddingTop="2dp"
            android:text="@string/Entrepreneur1_1"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/roboto"
            android:background="@drawable/btn_game_true_and_false"
            android:padding="10dp"
            android:paddingTop="2dp"
            android:text="@string/Entrepreneur2_1"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_game_true_and_false"
            android:padding="10dp"
            android:paddingTop="2dp"
            android:text="@string/Entrepreneur3_1"
            android:textColor="@color/text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/btn_game_true_and_false"
            android:padding="10dp"
            android:paddingTop="2dp"
            android:text="@string/Entrepreneur3_1"
            android:textColor="@color/text"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:fontFamily="@font/roboto"
            android:background="@drawable/stule_btn_black95_and_true"
            android:text="@string/Back"
            android:textColor="@color/text"
            android:textSize="24sp" />

    </LinearLayout>
</RelativeLayout>
